--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,11 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <header class="main-box"></header>
+  	<p class="green"></p>
+    <p class="blue"></p>
+    <p class="grey"></p>
+    <p class="black"></p>
+    <p class="orange"></p>
 </body>
 </html>
