--- a/position-exercise.html
+++ b/position-exercise.html
@@ -19,7 +19,7 @@
 <body>
   <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
   <nav>
-    <img src="images/icon.png">
+    <img src="images/icon.png" class="logo">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="display-exercise.html">display</a></li>
