--- a/position-exercise.html
+++ b/position-exercise.html
@@ -28,7 +28,8 @@
   </nav>
 
   <main>
-    <!-- Put the HTML you need to accomplish the design -->
-  </main>
+	<img src="images/spacecat.png" class="space cat">
+	<img src="images/spacedog.png" class="space dog">    
+</main>
 </body>
 </html>
