search bar 1st draft

--- a/design.html
+++ b/design.html
@@ -16,5 +16,12 @@
 			</ul>
 		</div>
 	</nav>
+	<div class="main-container">
+		<form>
+			<label class="search-jobs">Search Jobs</label>
+			<input class="search-input" type="Search" name="text" placeholder="Search software jobs">
+			<button><img src="images/magnifying-glass.png"></button>
+		</form>
+	</div>
 </body>
 </html>
