--- a/design.html
+++ b/design.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8" name="description" content="Design prototype for Thinkful's front end web development course">
 	<link rel="stylesheet" type="text/css" href="styles/design.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
 </head>
 <body>
 	<nav>
-		<div class="container">
+		<div class="top-nav-container">
 			<a href="design.html" class="home">Greg's List</a>
 			<ul>
 				<li class="nav-list">Post</li>
@@ -16,12 +17,24 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="main-container">
-		<form>
+	<form class="main-container">
 			<label class="search-jobs">Search Jobs</label>
 			<input class="search-input" type="Search" name="text" placeholder="Search software jobs">
 			<button><img src="images/magnifying-glass.png"></button>
-		</form>
+	</form>
+	<div class="lower-nav">
+		<a href="#" class="previous">< prev</a>
+		<span class="current">1 to 100 of 179</span>
+		<a href="#" class="next">next ></a>
 	</div>
+	<div class="other-jobs">
+		<ul class="job-list">
+			<li class="jobs">June 22<span>Technical Project Manager</span>Midtown East</li>
+			<li class="jobs">June 21<span>Frontend Developer</span>SoHo</li>
+			<li class="jobs">June 20<span>Senior Python Developer/Cofounder</span>Flatiron</li>
+		</ul>
+	</div>
+
+	
 </body>
 </html>
