--- a/design.html
+++ b/design.html
@@ -12,8 +12,8 @@
 		<div class="top-nav-container">
 			<a href="design.html" class="home">Greg's List</a>
 			<ul>
-				<li class="nav-list">Post</li>
-				<li class="nav-list">Account</li>
+				<li class="nav-list"><a href="#">Post</a></li>
+				<li class="nav-list"><a href="#">Account</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -23,15 +23,15 @@
 			<button><img src="images/magnifying-glass.png"></button>
 	</form>
 	<div class="lower-nav">
-		<a href="#" class="previous">< prev</a>
+		<a class="previous">< prev</a>
 		<span class="current">1 to 100 of 179</span>
-		<a href="#" class="next">next ></a>
+		<a class="next">next ></a>
 	</div>
 	<div class="other-jobs">
 		<ul class="job-list">
-			<li class="jobs">June 22<span>Technical Project Manager</span>Midtown East</li>
-			<li class="jobs">June 21<span>Frontend Developer</span>SoHo</li>
-			<li class="jobs">June 20<span>Senior Python Developer/Cofounder</span>Flatiron</li>
+			<li class="listing">June 22<span><a href="#" class="jobs">Technical Project Manager</a></span>Midtown East</li>
+			<li class="listing">June 21<span><a href="#" class="jobs">Frontend Developer</a></span>SoHo</li>
+			<li class="listing">June 20<span><a href="#" class="jobs">Senior Python Developer/Cofounder</a></span>Flatiron</li>
 		</ul>
 	</div>
 
